Bug 959484 - de-THREADSAFE XPConnect. r=bholley